--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -133,13 +133,16 @@
     <ClCompile Include="src\game\game_file.cpp" />
     <ClCompile Include="src\game\input.cpp" />
     <ClCompile Include="src\game\map.cpp" />
+    <ClCompile Include="src\game\player.cpp" />
     <ClCompile Include="src\game\scene.cpp" />
+    <ClCompile Include="src\game\shop.cpp" />
     <ClCompile Include="src\game\spawner.cpp" />
     <ClCompile Include="src\game\stat.cpp" />
     <ClCompile Include="src\game\systems.cpp" />
     <ClCompile Include="src\game\tile.cpp" />
     <ClCompile Include="src\game\lizard.cpp" />
     <ClCompile Include="src\game\timer.cpp" />
+    <ClCompile Include="src\game\visual_tile.cpp" />
     <ClCompile Include="src\general\logger.cpp" />
     <ClCompile Include="src\h_impl.cpp" />
     <ClCompile Include="src\general\astar.cpp" />
@@ -338,13 +341,16 @@
     <ClInclude Include="src\game\game_file.hpp" />
     <ClInclude Include="src\game\input.hpp" />
     <ClInclude Include="src\game\map.hpp" />
+    <ClInclude Include="src\game\player.hpp" />
     <ClInclude Include="src\game\scene.hpp" />
+    <ClInclude Include="src\game\shop.hpp" />
     <ClInclude Include="src\game\spawner.hpp" />
     <ClInclude Include="src\game\tile.hpp" />
     <ClInclude Include="src\game\lizard.hpp" />
     <ClInclude Include="src\game\components.hpp" />
     <ClInclude Include="src\game\stat.hpp" />
     <ClInclude Include="src\game\systems.hpp" />
+    <ClInclude Include="src\game\visual_tile.hpp" />
     <ClInclude Include="src\game\timer.hpp" />
     <ClInclude Include="src\general\logger.hpp" />
     <ClInclude Include="src\global.hpp" />
