--- a/spellbook.vcxproj.filters
+++ b/spellbook.vcxproj.filters
@@ -387,6 +387,9 @@
     <ClCompile Include="src\game\entities\enemy_ik.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\general\path.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\global.hpp">
@@ -1080,6 +1083,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\entities\enemy_ik.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\general\path.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
