--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -44,7 +44,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.211.0\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.211.0\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include;libs\miniaudio</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>global.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -58,7 +58,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.211.0\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.211.0\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include;libs\miniaudio</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>global.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -125,6 +125,7 @@
     <ClCompile Include="src\editor\skeleton_widget.cpp" />
     <ClCompile Include="src\editor\test_scene.cpp" />
     <ClCompile Include="src\editor\widget_system.cpp" />
+    <ClCompile Include="src\game\audio.cpp" />
     <ClCompile Include="src\game\camera_controller.cpp" />
     <ClCompile Include="src\game\entities\ability.cpp" />
     <ClCompile Include="src\game\entities\area_trigger.cpp" />
@@ -164,6 +165,7 @@
     <ClCompile Include="src\game\visual_tile.cpp" />
     <ClCompile Include="src\general\bitmask_3d.cpp" />
     <ClCompile Include="src\general\logger.cpp" />
+    <ClCompile Include="src\general\path.cpp" />
     <ClCompile Include="src\h_impl.cpp" />
     <ClCompile Include="src\general\astar.cpp" />
     <ClCompile Include="src\general\color.cpp" />
@@ -352,6 +354,7 @@
     <ClInclude Include="src\editor\test_scene.hpp" />
     <ClInclude Include="src\editor\widget_system.hpp" />
     <ClInclude Include="src\extension\fmt.hpp" />
+    <ClInclude Include="src\game\audio.hpp" />
     <ClInclude Include="src\game\camera_controller.hpp" />
     <ClInclude Include="src\game\entities\ability.hpp" />
     <ClInclude Include="src\game\entities\area_trigger.hpp" />
@@ -385,6 +388,7 @@
     <ClInclude Include="src\game\timer.hpp" />
     <ClInclude Include="src\general\bitmask_3d.hpp" />
     <ClInclude Include="src\general\logger.hpp" />
+    <ClInclude Include="src\general\path.hpp" />
     <ClInclude Include="src\global.hpp" />
     <ClInclude Include="src\general\astar.hpp" />
     <ClInclude Include="src\general\color.hpp" />
