--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -50,6 +50,8 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessorDefinitions>VUK_USE_SHADERC;IMGUI_USER_CONFIG="imgui_config.h";TRACY_ENABLE</PreprocessorDefinitions>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <EnableModules>false</EnableModules>
+      <BuildStlModules>false</BuildStlModules>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.211.0\Lib;libs\shaderc\lib;libs\GLFW\bin</AdditionalLibraryDirectories>
@@ -63,6 +65,8 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessorDefinitions>VUK_USE_SHADERC;IMGUI_USER_CONFIG="imgui_config.h";TRACY_ENABLE</PreprocessorDefinitions>
+      <EnableModules>false</EnableModules>
+      <BuildStlModules>false</BuildStlModules>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.211.0\Lib;libs\shaderc\lib;libs\GLFW\bin</AdditionalLibraryDirectories>
@@ -164,6 +168,7 @@
     <ClCompile Include="src\game\timer.cpp" />
     <ClCompile Include="src\game\visual_tile.cpp" />
     <ClCompile Include="src\general\bitmask_3d.cpp" />
+    <ClCompile Include="src\general\json_cache.cpp" />
     <ClCompile Include="src\general\logger.cpp" />
     <ClCompile Include="src\general\path.cpp" />
     <ClCompile Include="src\h_impl.cpp" />
@@ -387,6 +392,7 @@
     <ClInclude Include="src\game\visual_tile.hpp" />
     <ClInclude Include="src\game\timer.hpp" />
     <ClInclude Include="src\general\bitmask_3d.hpp" />
+    <ClInclude Include="src\general\json_cache.hpp" />
     <ClInclude Include="src\general\logger.hpp" />
     <ClInclude Include="src\general\path.hpp" />
     <ClInclude Include="src\global.hpp" />
