--- a/spellbook.vcxproj
+++ b/spellbook.vcxproj
@@ -44,7 +44,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.211.0\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include;libs\miniaudio</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.250.1\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include;libs\miniaudio</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>global.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -54,13 +54,13 @@
       <BuildStlModules>false</BuildStlModules>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.211.0\Lib;libs\shaderc\lib;libs\GLFW\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.250.1\Lib;libs\shaderc\lib;libs\GLFW\bin</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;glfw3dll.lib;vulkan-1.lib;shaderc_shared.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.211.0\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include;libs\miniaudio</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\VulkanSDK\1.3.250.1\Include;src;libs;libs\entt\src;libs\fmt\include;libs\lz4;libs\dtoa;libs\tinyobjloader;libs\tinygltf;libs\imgui;libs\GLFW\include;libs\vk-bootstrap\src;libs\vuk\include;libs\vuk\ext\plf_colony;libs\vuk\ext\concurrentqueue;libs\vuk\ext\robin-hood-hashing\src\include;libs\vuk\ext\stb;libs\vuk\ext\VulkanMemoryAllocator\include;libs\vuk\ext\SPIRV-Cross;libs\vuk\ext\doctest;libs\tracy\public;libs\magic_enum\include;libs\miniaudio</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>global.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -69,7 +69,7 @@
       <BuildStlModules>false</BuildStlModules>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.211.0\Lib;libs\shaderc\lib;libs\GLFW\bin</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.250.1\Lib;libs\shaderc\lib;libs\GLFW\bin</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;glfw3dll.lib;vulkan-1.lib;shaderc_shared.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -139,7 +139,7 @@
     <ClCompile Include="src\game\entities\drop.cpp" />
     <ClCompile Include="src\game\entities\enemy.cpp" />
     <ClCompile Include="src\game\entities\enemy_ik.cpp" />
-    <ClCompile Include="src\game\entities\impair.cpp" />
+    <ClCompile Include="src\game\entities\tags.cpp" />
     <ClCompile Include="src\game\entities\lizard.cpp" />
     <ClCompile Include="src\game\entities\lizards\assassin.cpp" />
     <ClCompile Include="src\game\entities\lizards\barbarian.cpp" />
@@ -370,7 +370,7 @@
     <ClInclude Include="src\game\entities\drop.hpp" />
     <ClInclude Include="src\game\entities\enemy.hpp" />
     <ClInclude Include="src\game\entities\enemy_ik.hpp" />
-    <ClInclude Include="src\game\entities\impair.hpp" />
+    <ClInclude Include="src\game\entities\tags.hpp" />
     <ClInclude Include="src\game\entities\lizard.hpp" />
     <ClInclude Include="src\game\entities\lizards\lizard_builder.hpp" />
     <ClInclude Include="src\game\entities\projectile.hpp" />
