--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,5 @@ add_subdirectory(editor)
 add_subdirectory(game)
 
 target_include_directories(spellbook_src PUBLIC .)
-target_link_libraries(spellbook_src PUBLIC 
-	archive
-	libs
-)
+target_link_libraries(spellbook_src PUBLIC archive libs renderer)
 target_precompile_headers(spellbook_src PUBLIC archive/general/global.hpp)
