--- a/src/renderer/CMakeLists.txt
+++ b/src/renderer/CMakeLists.txt
@@ -1,17 +1,15 @@
 find_package(Vulkan REQUIRED)
 
-target_sources(spellbook_src PUBLIC
-	assets/asset_loader.cpp
+add_library(renderer
     assets/material.cpp
-    assets/mesh_asset.cpp
     assets/mesh.cpp
     assets/model.cpp
     assets/particles.cpp
     assets/skeleton.cpp
-    assets/texture_asset.cpp
     assets/texture.cpp
     camera.cpp
-    draw_functions.cpp
+	draw_functions.cpp
+	gpu_asset_cache.cpp
     render_scene.cpp
     renderable.cpp
     renderer.cpp
@@ -19,3 +17,7 @@ target_sources(spellbook_src PUBLIC
     vertex.cpp
     viewport.cpp
 )
+
+target_include_directories(renderer PRIVATE ..)
+target_link_libraries(renderer PRIVATE archive libs)
+target_precompile_headers(renderer PUBLIC ../archive/general/global.hpp)
