--- a/src/game/entities/CMakeLists.txt
+++ b/src/game/entities/CMakeLists.txt
@@ -22,4 +22,8 @@ target_sources(spellbook_src PUBLIC
     lizards/ranger.cpp
     lizards/warlock.cpp
     lizards/water_mage.cpp
+    lizards/thief.cpp
+    lizards/druid.cpp
+    lizards/laser_mage.cpp
+    lizards/treasurer.cpp
 )
