--- a/src/game/entities/CMakeLists.txt
+++ b/src/game/entities/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_subdirectory(lizards)
 target_sources(spellbook_src PUBLIC
     ability.cpp
     area_trigger.cpp
@@ -7,23 +8,10 @@ target_sources(spellbook_src PUBLIC
     drop.cpp
     enemy_ik.cpp
     enemy.cpp
-    lizard.cpp
     projectile.cpp
     spawner.cpp
     stat.cpp
     tags.cpp
     targeting.cpp
     tile.cpp
-    lizards/assassin.cpp
-    lizards/barbarian.cpp
-    lizards/champion.cpp
-    lizards/illusion_mage.cpp
-    lizards/mind_mage.cpp
-    lizards/ranger.cpp
-    lizards/warlock.cpp
-    lizards/water_mage.cpp
-    lizards/thief.cpp
-    lizards/druid.cpp
-    lizards/laser_mage.cpp
-    lizards/treasurer.cpp
 )
